changes made in module: Working With Text in HTML

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div style="width:1000px;margin-left: auto;margin-right: auto;">
 
+    <div style="width:1000px;margin-left: auto;margin-right: auto;">
         <main id="main">
             <article>
                 <header>
@@ -23,6 +23,34 @@
                     <img src="./images/bethany-fullsize.jpg" width="600" alt="Bethany in her pie shop">
                     <figcaption>Bethany in her pie shop</figcaption>
                 </figure>
+
+                <h2>Our history <small>so far</small></h2>
+                <p>For many years, <strong>Bethany</strong> has been baking the most delicious pies at her home. In 2013, we
+                    opened
+                    our first store
+                    in Brussels (Belgium) in a cosy little street near the Grand Market. People from all over the world
+                    fell
+                    in love
+                    with the soft cakes, heavenly cheese cakes, spicy apple pies...<br><em><mark>The store became a success in no time.</mark></em>
+                </p>
+                <p>
+                    <b>In 2015,</b> no less than <strong>100</strong> pies were sold every day and Bethany's Pie Shop moved into a larger
+                    building after making a &euro; 2000 revenue.
+                    After receiving many requests, it became clear that our next step was making it possible to order
+                    pies from the comfort of your own home and from anywhere in the world. You are now looking at the
+                    result of this:
+                    our very own webstore, making it possible to order Bethany's delicious pies whenever you feel like
+                    it!
+                </p>
+                <p>Download our &rarr; full <a href="https://pieshop.netlify.com/downloads/PriceList.zip">price list</a></p>
+            </article>
+
+            <section id="promos">
+                <h3 style="font-family:verdana;">Our weekly promotions</h3>
+                <h4>Cheese cake</h4>
+                &euro; 12.95 - serves 4<br>
+                <img src="./images/cheesecakesmall.jpg" alt="Cheese cak with strawberry">
+            </section>
         </main>
     </div>
 
