changes made in module: Working With Lists in HTML

--- a/allpies.html
+++ b/allpies.html
@@ -12,7 +12,30 @@
 </head>
 
 <body>
+    <header id="mainheader">
+        <nav>
+            <ul>
+                <li><img src="./images/cake.svg" height="55"></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="allpies.html">All pies</a></li>                
+            </ul>
+        </nav>
+    </header>
     <div style="width:1000px;margin-left: auto;margin-right: auto;">
+        <aside id="leftmenu">
+            <img src="./images/bethanylogo.png">
+
+            <header>
+                <h4 style="text-align: center;">Browse our pies</h4>
+            </header>
+            <ul>
+                <li><a href="https://pieshop.netlify.com/pieoverview.html">All pies</a></li>
+                <li><a href="https://pieshop.netlify.com/cheesecakes.html">Cheese cakes</a></li>
+                <li><a href="https://pieshop.netlify.com/fruitpies.html">Fruit pies</a></li>
+                <li><a href="https://pieshop.netlify.com/seasonalpies.html">Seasonal pies</a></li>
+            </ul>
+
+        </aside>
         <main id="main">
             <table border="1" style="width:100%;border: 1px solid black;border-collapse: collapse; padding: 20px;border-spacing: 5px;">
                 <caption>
