--- a/index.html
+++ b/index.html
@@ -12,8 +12,31 @@
 </head>
 
 <body>
-
+    <header id="mainheader">
+        <nav>
+            <ul>
+                <li><img src="./images/cake.svg" height="55"></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="allpies.html">All pies</a></li>                
+            </ul>
+        </nav>
+    </header>
     <div style="width:1000px;margin-left: auto;margin-right: auto;">
+        <aside id="leftmenu">
+            <a href="https://pieshop.netlify.com/index.html"><img src="./images/bethanylogo.png"></a>
+
+            <header>
+                <h4 style="text-align: center;">Browse our pies</h4>
+            </header>
+            <ul>
+                <li><a href="https://pieshop.netlify.com/pieoverview.html">All pies</a></li>
+                <li><a href="https://pieshop.netlify.com/cheesecakes.html">Cheese cakes</a></li>
+                <li><a href="https://pieshop.netlify.com/fruitpies.html">Fruit pies</a></li>
+                <li><a href="https://pieshop.netlify.com/seasonalpies.html">Seasonal pies</a></li>
+                <li><a href="https://pieshop.netlify.com/index.html#promos">Promotions</a></li>
+            </ul>            
+
+        </aside>
         <main id="main">
             <article>
                 <header>
