--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 </head>
 
 <body>
-    <div style="width:1000px;margin-left: auto;margin-right: auto;">
-
+    <div style="width:500px;margin-left: auto;margin-right: auto;">
         <main id="main">           
                 <header>
                     <h1 style="font-size:35px;color:#a593c2">Welcome to Bethany's Pie Shop</h1>
@@ -22,6 +21,11 @@
                     <img src="./images/bethany-fullsize.jpg" width="600" alt="Bethany in her pie shop">
                     <figcaption>Bethany in her pie shop</figcaption>
                 </figure>
+                Our history so far
+                For many years, Bethany has been baking the most delicious pies at her home. In 2013, we opened our first store in Brussels (Belgium) in a cosy little street near the Grand Market. People from all over the world fell in love with the soft cakes, heavenly cheese cakes, spicy apple pies...The store became a success in no time.
+      
+                      In 2015, no less than 100 pies were sold every day and Bethany's Pie Shop moved into a larger building after making a 2000 EURO revenue. After receiving many requests, it became clear that our next step was making it possible to order pies from the comfort of your own home and from anywhere in the world. You are now looking at the result of this: our very own webstore, making it possible to order Bethany's delicious pies whenever you feel like it!
+             Download our full <a href="https://pieshop.netlify.com/downloads/PriceList.zip">price list</a>                
         </main>
     </div>
 
