--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><img src="./images/cake.svg" height="55"></li>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="allpies.html">All pies</a></li>                
             </ul>
         </nav>
